cpu-comparison/2026-10-05-stable-comparison/configs/kubernetes/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-benchmark
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-scale
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: benchmark
  namespace: gateway-benchmark
spec:
  gatewayClassName: REPLACE_GATEWAY_CLASS
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces: {from: All}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: benchmark
  namespace: gateway-benchmark
spec:
  parentRefs:
  - name: benchmark
  rules:
  - matches:
    - path: {type: PathPrefix, value: /}
    backendRefs:
    - name: backend
      namespace: gateway-backend
      port: 8081
